--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
     }
     agent {
       node {
-        // TODO: run this simple pipeline on jenkins 'master' node
+        label 'master'
       }
     }
 
@@ -22,7 +22,11 @@ pipeline {
                 }
             }
         }
-
+        stage('stage 2') {
+            steps {
+              sh 'echo hellow from stage 2!'
+            }
+        }
         // TODO: ADD A STAGE THAT SAYS HELLO
 
         // TODO: ADD AN APPROVAL STAGE
@@ -30,6 +34,13 @@ pipeline {
         stage('stage 3') {
             steps {
                 sh 'echo hello from stage 3!. This is the last stage...'
+            }
+        }
+        stage('manual approval') {
+            steps {
+              timeout(time: 60, unit: 'MINUTES') {
+                  input message: "Move to stage 3?"
+              }
             }
         }
 
